# Stock-Tracking

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.ps1  启动A股监看.bat
docs/: LOCAL_DATA_WAREHOUSE.md
src/astock_monitor/: __init__.py  alert_engine.py  alerts.py  analytics_widgets.py  app.py  backtest.py  candlestick_patterns.py  chart_widget.py  company_events.py  data_management_page.py  data_provider.py  data_quality.py  detail_page.py  event_timeline.py  factor_models.py  financial_analysis.py  formula_engine.py  historical_store.py  indicators.py  main_window.py  market_analysis.py  market_dashboard_page.py  models.py  paper_trading.py  portfolio_backtest.py  quant_page.py  repository.py  scanner_service.py  screening.py  screening_page.py  strategy_page.py  sync_cli.py  sync_service.py  time_utils.py  ui_common.py  watchlist_page.py
tests/: test_detail_reloads.py  test_formula_engine.py  test_indicators.py  test_latest_features.py  test_new_monitor_features.py  test_phase456.py  test_quant_factors_paper.py  test_repository.py  test_search.py  test_warehouse_phases.py  test_watchlist_page.py
