[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "astock-monitor"
version = "0.1.0"
description = "A Windows desktop watchlist and technical-analysis terminal for A-shares, ETFs and indices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6==6.11.1",
  "akshare==1.18.60",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "pandas-ta-classic==0.6.52",
  "requests>=2.32,<3",
]

[project.scripts]
astock-monitor = "astock_monitor.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest_tmp"
